<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.openmrs.module</groupId>
	<artifactId>sisrme-etl</artifactId>
	<version>1.0</version>
	<packaging>pom</packaging>
	<name>Epts ETL Module</name>
	<description>An ETL tool with multiple capabilities</description>
	<url>https://wiki.openmrs.org/display/docs/Sisrme+ETL+Module</url>
	
	<developers>
		<developer>
			<name>MISAU</name>
		</developer>
	</developers>
	
	<organization>
		<name>Misau</name>
		<url>https://misau.gov.mz</url>
	</organization>

	<scm>
		<connection>scm:svn:https://svn.openmrs.org/openmrs-modules/sisrme-etl/trunk/</connection>
		<developerConnection>scm:svn:https://svn.openmrs.org/openmrs-modules/sisrme-etl/trunk/</developerConnection>
		<url>https://svn.openmrs.org/openmrs-modules/sisrme-etl/trunk/</url>
	</scm>

	<modules>
		<module>api</module>
	</modules>
	
	<properties>
		<openMRSVersion>1.11.5</openMRSVersion>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>11</java.version>
		<maven.compiler.release>${java.version}</maven.compiler.release>
	</properties>
 
	<dependencyManagement>
		<dependencies>
			<!-- Begin OpenMRS core -->
			
			<dependency>
				<groupId>org.openmrs.api</groupId>
				<artifactId>openmrs-api</artifactId>
				<version>${openMRSVersion}</version>
				<type>jar</type>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>org.openmrs.web</groupId>
				<artifactId>openmrs-web</artifactId>
				<version>${openMRSVersion}</version>
				<type>jar</type>
				<scope>provided</scope>
			</dependency>
						
			<dependency>
				<groupId>org.openmrs.api</groupId>
				<artifactId>openmrs-api</artifactId>
				<version>${openMRSVersion}</version>
				<type>test-jar</type>
				<scope>test</scope>
			</dependency>
			
			<dependency>
				<groupId>org.openmrs.web</groupId>
				<artifactId>openmrs-web</artifactId>
				<version>${openMRSVersion}</version>
				<type>test-jar</type>
				<scope>test</scope>
			</dependency>
			
			<dependency>
				<groupId>org.openmrs.test</groupId>
				<artifactId>openmrs-test</artifactId>
				<version>${openMRSVersion}</version>
				<type>pom</type>
				<scope>test</scope>
			</dependency>
			
		 <dependency>
		        <groupId>ch.qos.logback</groupId>
		        <artifactId>logback-classic</artifactId>
		        <version>1.2.3</version>        
		    </dependency>
		
		    <dependency>
		        <groupId>org.slf4j</groupId>
		        <artifactId>slf4j-api</artifactId>
		        <version>1.7.32</version>
		    </dependency>
    
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.13.0</version>
					<configuration>
						<release>${maven.compiler.release}</release>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.openmrs.maven.plugins</groupId>
					<artifactId>maven-openmrs-plugin</artifactId>
					<version>1.0.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>2.4</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<repositories>
		<repository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>https://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
		</repository>
		<repository>
			<id>central</id>
			<name>Maven Repository Switchboard</name>
			<layout>default</layout>
			<url>https://repo1.maven.org/maven2</url>
		</repository>
	</repositories>

</project>
